[gd_scene load_steps=8 format=3 uid="uid://b1d1kmsvqr4uj"]

[ext_resource type="Script" path="res://color_rect_pagina_inicial.gd" id="1_t2eev"]
[ext_resource type="Script" path="res://Regras_button.gd" id="2_gp2im"]

[sub_resource type="GDScript" id="GDScript_arkwt"]

[sub_resource type="LabelSettings" id="LabelSettings_pebrj"]
font_size = 30
font_color = Color(0.0295066, 0.0295066, 0.0295066, 1)
script = SubResource("GDScript_arkwt")

[sub_resource type="Theme" id="Theme_antws"]
default_font_size = 22

[sub_resource type="GDScript" id="GDScript_py24o"]

[sub_resource type="Theme" id="Theme_csh02"]
default_font_size = 22

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRectPaginaInicial" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t2eev")

[node name="Label" type="Label" parent="ColorRectPaginaInicial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.334
anchor_top = 0.128
anchor_right = 0.334
anchor_bottom = 0.128
offset_left = -35.52
offset_top = -51.136
offset_right = 491.48
offset_bottom = 80.864
grow_horizontal = 2
text = "Softwheel"
label_settings = SubResource("LabelSettings_pebrj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="JogarButton" type="Button" parent="ColorRectPaginaInicial"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.516
anchor_top = 0.055
anchor_right = 0.516
anchor_bottom = 0.055
offset_left = -116.888
offset_top = 109.32
offset_right = 75.1119
offset_bottom = 172.32
theme = SubResource("Theme_antws")
text = "JOGAR"
script = SubResource("GDScript_py24o")

[node name="sairButton" type="Button" parent="ColorRectPaginaInicial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.49
anchor_right = 0.33
anchor_bottom = 0.49
offset_left = 137.22
offset_top = -48.32
offset_right = 329.22
offset_bottom = 14.68
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_csh02")
text = "SAIR"

[node name="RegrasButton" type="Button" parent="ColorRectPaginaInicial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.331
anchor_top = 0.376
anchor_right = 0.331
anchor_bottom = 0.376
offset_left = 136.192
offset_top = -48.768
offset_right = 328.192
offset_bottom = 14.232
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_csh02")
text = "REGRAS"
script = ExtResource("2_gp2im")
